--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 /frogdroid/app/build/tmp
 /frogdroid/app/build/outputs/mapping
 /frogdroid/app/build/outputs/logs
+/frogdroid/app/build/outputs/logs/*
 /frogdroid/app/build/outputs/logs/manifest-merger-debug-report.txt
 /frogdroid/app/build/outputs/logs/manifest-merger-release-report.txt
 /frogdroid/app/build/outputs/sdk-dependencies
